--- a/MauiCustoViagem/Views/VerPedagio.xaml
+++ b/MauiCustoViagem/Views/VerPedagio.xaml
@@ -12,23 +12,19 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Somar" Clicked="ToolbarItem_Clicked_Somar"  />
-        <ToolbarItem Text="Adicionar" Clicked="ToolbarItem_Clicked_Add" />
+        <ToolbarItem Text="Calcular Custo" Clicked="ToolbarItem_Clicked_Custo"  />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <VerticalStackLayout>
-            <SearchBar x:Name="txt_search" Margin="-10, 0, 0, 0" Placeholder="Busca de Produtos" TextChanged="txt_search_TextChanged" />
-
-            <RefreshView x:Name="ref_carregando" IsRefreshing="False" Refreshing="ref_carregando_Refreshing"/>
-
-            <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected" >
+            <ListView x:Name="lst_pedagios" ItemSelected="lst_pedagios_ItemSelected" >
                 <ListView.Header>
-                    <Grid ColumnDefinitions="3*, *, *, *">
-                        <Label Grid.Column="0" Text="Produto"/>
-                        <Label Grid.Column="1" Text="Qnt"/>
-                        <Label Grid.Column="2" Text="Preco"/>
-                        <Label Grid.Column="3" Text="Total"/>
+                    <Grid ColumnDefinitions="2*, *, *, *, *">
+                        <Label Grid.Column="0" Text="Origem"/>
+                        <Label Grid.Column="1" Text="Destino"/>
+                        <Label Grid.Column="2" Text="Distância"/>
+                        <Label Grid.Column="3" Text="Rendimento"/>
+                        <Label Grid.Column="4" Text="Preço do Combustivel"/>
                     </Grid>
                 </ListView.Header>
 
@@ -38,11 +34,12 @@
                             <ViewCell.ContextActions>
                                 <MenuItem Text="Remover" Clicked="MenuItem_Clicked_Remover"/>
                             </ViewCell.ContextActions>
-                            <Grid ColumnDefinitions="3*, *, *, *">
-                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Descricao}"/>
-                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding Quantidade}"/>
-                                <Label Grid.Row="0" Grid.Column="2" Text="{Binding Preco}"/>
-                                <Label Grid.Row="0" Grid.Column="3" Text="{Binding Total}"/>
+                            <Grid ColumnDefinitions="2*, *, *, *, *">
+                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem}"/>
+                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding Destino}"/>
+                                <Label Grid.Row="0" Grid.Column="2" Text="{Binding Distancia}"/>
+                                <Label Grid.Row="0" Grid.Column="3" Text="{Binding Rendimento}"/>
+                                <Label Grid.Row="0" Grid.Column="4" Text="{Binding Preco_comb}"/>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
