--- a/MauiCustoViagem/MainPage.xaml
+++ b/MauiCustoViagem/MainPage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiCustoViagem.MainPage"
-             Title="Pedágio">
+             Title="Adicionar Viagem">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Salvar" Clicked="ToolbarItem_Clicked_Salvar" />
-        <ToolbarItem Text="Ver Pedágios" Clicked="ToolbarItem_Clicked_Ver" />
+        <ToolbarItem Text="Ver Viagens" Clicked="ToolbarItem_Clicked_Ver" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
@@ -24,7 +24,10 @@
             <Entry x:Name="txt_rendimento"/>
 
             <Label Text="Preço do Combustivel:"/>
-            <Entry x:Name="txt_preco_comb"/>
+            <Entry x:Name="txt_preco"/>
+
+            <Label Text="Preço do pedágio:"/>
+            <Entry x:Name="txt_pedagio"/>
         </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
